# llm-from-scratch

./: pyproject.toml
llm/gpt2/: README.md  config.py  explore.ipynb  generation.py  model.py  tokenizer.py  weights.py
llm/qwen3/: README.md  config.py  explore.ipynb  generation.py  model.py  tokenizer.py  weights.py
